grid creation w/style & classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 :root {
     --primary-color: #7FFFD4;
     --secondary-color: #fff;
+    --active: #00559b;
     --header-height: 80px;
     --footer-height: 60px;
 }
@@ -49,7 +50,25 @@ header {
 
 /* SECTION MAIN */
 main {
-    height: calc(100vh - var(--header-height) - var(--footer-height));
+    /* height: calc(100vh - var(--header-height) - var(--footer-height)); */
+    justify-content: center;
+    align-items: center;
+    height: calc(100% - var(--header-height) - var(--footer-height));
+}
+
+#grid {
+    width: 60%;
+    flex-wrap: wrap;
+}
+
+.box {
+    flex-basis: calc(100% / 10);
+    aspect-ratio: 1;
+    border: 1px solid black;
+}
+
+.box-active {
+    background-color: var(--active);
 }
 
 /* !SECTION MAIN END */
@@ -59,6 +78,9 @@ footer {
     padding: 20px 2%;
     background-color: var(--secondary-color);
     height: var(--footer-height);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 /* !SECTION FOOTER END */
