addEventListener added to boxes w/ console

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,9 @@ main {
     flex-basis: calc(100% / 10);
     aspect-ratio: 1;
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .box-active {
